--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=NoSQLDemo
+
+MONGODB_USER=root
+MONGODB_PASSWORD=123456
+spring.data.mongodb.database=user_db
+spring.data.mongodb.port=27037
+spring.data.mongodb.host=localhost
+
+server.port=8102
